<resources>
    <string name="safety_net_api_key">AIzaSyDRY38k2M4yROLP_lE1mSp_VbChnhVhJR0</string>
    <string name="country_code">+91</string>

    <string name="app_name">Medical Gateway</string>

    <string name="password">Password  </string>
    <string name="problem">Problem  </string>
    <string name="describe">Describe about your problem here </string>
    <string name="preferred_doctor">Preferred Doctor  </string>
    <string name="appointment_date">Appointment Date</string>
    <string name="date_format">DD/MM/YYYY  </string>
    <string name="book_button">Book My Appointment  </string>
    <string name="internet_description">Image to show when no internet  </string>
    <string name="no_internet_text">Check your internet Connection Try again  </string>
    <string name="splash_image_des">Image in splash activity </string>
    <string name="Hospital_name">Medicare Hospital </string>
    <string name="oops">Oops!  </string>
    <string name="try_again">Try Again  </string>
    <string name="about_hospital">For over three decades, we have specialised in specific areas of medicine - mental health, orthopaedics, neurology, surgery and general medicine. This approach has given us an in-depth understanding of specific disorders and their treatments, enabling us to focus on providing the best treatment options and care for our patients. Each year, our 10,500 employees treat and care for around 320,000 patients at currently 26 locations in Germany and the United Kingdom.  Our aim is to give every patient the prospect of a better quality of life. To do so, our reinvestment model ensures we maintain a high standard of quality and are able to be innovative and forward thinking with our infrastructure, clinical delivery and staff development. Additionally, our collaboration with experienced specialists, expert healthcare professionals, clinical partners and patient groups ensures we provide the best-possible experience and care for patients and their families when visiting our hospitals.</string>
    <string name="name">Name  </string>
    <string name="dob">Date of Birth  </string>
    <string name="email">Email Address  </string>
    <string name="Address">Residential Address  </string>
    <string name="phone_number">Mobile Number </string>
    <string name="Home">Home </string>
    <string name="pharmacy">Pharmacy </string>
    <string name="profile">Profile </string>
    <string name="blood_group">Blood Group</string>
    <string name="Save">Save changes</string>
    <string name="per">per</string>
    <string name="mfg_by">Mfg. by:</string>
    <string name="price">Price:</string>
    <string name="cd_pharmacy">Image of medicine</string>
    <string-array name="blood_groups">
        <item>--</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
    </string-array>

    <string-array name="doctors">
        <item>Choose your Doctor</item>
        <item>ABC</item>
        <item>BCD</item>
        <item>DEF</item>
    </string-array>

    <string-array name="image_slider">
        <!--        TODO Update Hospital Name-->
        <item>Here in __________  we offer world class diagnosis and treatments</item>
        <item>We have one of the world\'s best Doctors at your service.</item>
        <item>We provide class leading </item>
    </string-array>


    <!--    Main Activity-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="terms_and_conditions">I accept the Terms and Conditions</string>
    <string name="help">Help</string>

    <!--    Login Activity-->
    <string name="upload_image">Upload Image</string>
    <string name="otp_heading">Enter the OTP sent to the entered mobile number</string>
    <string name="enter_here">Enter here</string>
    <string name="wrong_otp">Wrong OTP!</string>
    <string name="open_terms_and_conditions">Open Terms and Conditions</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="change_number">Change Number</string>
    <string name="enter_your_address">Enter your Address :</string>

    <string name="title_home">Home</string>
    <string name="sliding_text_first">We provide world class services.</string>
    <string name="sliding_text_second">Your Health is our concern.</string>
    <string name="sliding_text_third">Protect Yourself</string>
    <string name="name_of_medicine">Name of Medicine</string>
    <string name="rs">₹</string>
    <string name="search_message">Search by Name or Category</string>
    <string name="category">Category:</string>
    <string name="search">Search</string>
    <string name="image_of_doctor">Image of Doctor</string>
    <string name="speciality">Speciality</string>
    <string name="our_specialized_doctors">Specialized Doctors in Hospital</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="report_date">Report Date:</string>
    <string name="view_report">View Report</string>
    <string name="reports">Reports</string>
    <string name="appointment_date_holder">Appointment Date:</string>
    <string name="preferred_doctor_holder">Preferred Doctor:</string>
    <string name="problem_description">Problem Description:</string>
    <string name="appointment_status">Appointment Status:</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="not_fulfilled">Not Fulfilled</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="no_reports">You currently have NO Uploaded Reports</string>
    <string name="no_appointment">You haven\'t booked an Appointment yet</string>
    <string name="check_previous_reports">Check Previous Reports</string>
    <string name="enter_patient_id">Enter Patient ID</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="you_currently_have_no_upcoming_appointments">You currently have no upcoming appointments.</string>

</resources>