<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_appointDateHead"
            style="@style/textStyle_appointmentTextView"
            android:text="@string/appointment_date_holder"
            app:layout_constraintEnd_toEndOf="@id/text_probDescHead"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_appointDate"
            style="@style/textStyle_appointmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Hospital_name"
            app:layout_constraintBottom_toBottomOf="@id/text_appointDateHead"
            app:layout_constraintStart_toEndOf="@id/text_appointDateHead"
            app:layout_constraintTop_toTopOf="@id/text_appointDateHead" />

        <TextView
            android:id="@+id/text_prefDocHead"
            style="@style/textStyle_appointmentTextView"
            android:layout_marginTop="8dp"
            android:text="@string/preferred_doctor_holder"
            app:layout_constraintEnd_toEndOf="@id/text_probDescHead"
            app:layout_constraintTop_toBottomOf="@id/text_appointDateHead" />

        <TextView
            android:id="@+id/text_prefDoc"
            style="@style/textStyle_appointmentTextView"
            android:text="@string/preferred_doctor"
            app:layout_constraintBottom_toBottomOf="@id/text_prefDocHead"
            app:layout_constraintStart_toStartOf="@id/text_appointDate"
            app:layout_constraintTop_toTopOf="@id/text_prefDocHead" />

        <TextView
            android:id="@+id/text_probDescHead"
            style="@style/textStyle_appointmentTextView"
            android:layout_marginTop="8dp"
            android:text="@string/problem_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_prefDocHead" />

        <TextView
            android:id="@+id/text_problemDesc"
            style="@style/textStyle_appointmentTextView"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/describe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_prefDoc"
            app:layout_constraintTop_toBottomOf="@id/text_prefDoc" />

        <TextView
            android:id="@+id/text_appStatusHead"
            style="@style/textStyle_appointmentTextView"
            android:text="@string/appointment_status"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/text_probDescHead"
            app:layout_constraintTop_toBottomOf="@id/text_problemDesc" />


        <TextView
            android:id="@+id/text_appStatus"
            style="@style/textStyle_appointmentTextView"
            android:text="@string/Hospital_name"
            app:layout_constraintStart_toStartOf="@id/text_problemDesc"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_problemDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>