<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_appointDateHead"
            style="@style/textStyle_appointmentTextView"
            android:text="@string/appointment_date_holder"
            app:layout_constraintEnd_toEndOf="@id/text_probDescHead"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_appointDateDoc"
            style="@style/textStyle_appointmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Hospital_name"
            app:layout_constraintBottom_toBottomOf="@id/text_appointDateHead"
            app:layout_constraintStart_toEndOf="@id/text_appointDateHead"
            app:layout_constraintTop_toTopOf="@id/text_appointDateHead" />

        <TextView
            android:id="@+id/text_probDescHead"
            style="@style/textStyle_appointmentTextView"
            android:layout_marginTop="8dp"
            android:text="@string/problem_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_appointDateHead" />

        <TextView
            android:id="@+id/text_problemDescDoc"
            style="@style/textStyle_appointmentTextView"
            android:layout_width="0dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/describe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/text_appointDateDoc"
            app:layout_constraintTop_toBottomOf="@id/text_appointDateDoc" />

        <TextView
            android:id="@+id/text_appStatusHead"
            style="@style/textStyle_appointmentTextView"
            android:layout_marginTop="8dp"
            android:text="@string/appointment_status"
            app:layout_constraintEnd_toEndOf="@id/text_probDescHead"
            app:layout_constraintTop_toBottomOf="@id/text_problemDescDoc" />


        <TextView
            android:id="@+id/text_appStatusDoc"
            style="@style/textStyle_appointmentTextView"
            android:layout_marginTop="8dp"
            android:text="@string/Hospital_name"
            app:layout_constraintStart_toStartOf="@id/text_problemDescDoc"
            app:layout_constraintTop_toBottomOf="@id/text_problemDescDoc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>