<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <TextView
        android:id="@+id/textview_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/problem"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_problem"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/describe"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textview_problem">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Problem description"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/edittext_problem"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:autofillHints="Problem description"-->
    <!--        android:ems="10"-->
    <!--        android:gravity="start|top"-->
    <!--        android:hint="@string/describe"-->
    <!--        android:inputType="text"-->
    <!--        android:minLines="4"-->
    <!--        android:maxLines="4"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guideline_left"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textview_problem" />-->

    <TextView
        android:id="@+id/textview_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/preferred_doctor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edittext_problem" />

    <Spinner
        android:id="@+id/spinner_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textview_choose" />

    <TextView
        android:id="@+id/textview_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/appointment_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/spinner_doctor" />

    <Spinner
        android:id="@+id/spinner_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textview_date" />

    <Button
        android:id="@+id/button_book_appointment_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/spinner_date" />
</androidx.constraintlayout.widget.ConstraintLayout>

